--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.13.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
