Entire project refactoring. Added docker

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,22 @@
-# PostgreSQL database host 
+# PostgreSQL database host
+# @String
 DB_HOST=
 # PostgreSQL database port
+# @Number
 DB_PORT=
 # PostgreSQL user name
+# @String
 DB_USER=
 # PostgreSQL password
+# @String
 DB_PASS=
 # PostgreSQL database name
+# @String
 DB_NAME=
+# Sequelize dialect name
+# @String
+DB_TYPE=
+
 # Application server post
+# @Number
 APP_PORT=
