Implemented connection with the client

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ DB_TYPE=
 # Application server post
 # @Number
 APP_PORT=
+
+# Telegram bot token
+# @String
+TG_TOKEN=
+# Telegram chat id
+# @Number
+TG_CHAT_ID=
