--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.2.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "request": "^2.88.2",
     "sequelize": "^6.13.0",
     "uuid": "^8.3.2"
   },
