--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "sequelize": "^6.13.0",
     "uuid": "^8.3.2"
   },
-  "description": "",
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bertyaniy/yak-vdoma-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bertyaniy/yak-vdoma-server/issues"
+  },
+  "homepage": "https://github.com/bertyaniy/yak-vdoma-server#readme",
+  "description": ""
 }
